Refactor build scripts to standardize version handling and improve clarity in build messages

--- a/homer/Makefile
+++ b/homer/Makefile
@@ -1,15 +1,15 @@
-# Makefile for building and pushing homer-base
-VERSION ?= latest
-IMAGE_NAME = homer-base
-DOCKER_REPO = mscrnt/$(IMAGE_NAME)
+# Makefile for building and pushing homer base image with :base and :latest tags
+VERSION ?= base
+DOCKER_REPO = mscrnt/homer
 
 build:
-	docker build --no-cache -t $(DOCKER_REPO):$(VERSION) -f homer/Dockerfile .
-
-tag:
-	docker tag $(IMAGE_NAME):$(VERSION) $(DOCKER_REPO):$(VERSION)
+	docker build --no-cache \
+		-t $(DOCKER_REPO):$(VERSION) \
+		-t $(DOCKER_REPO):latest \
+		-f homer/Dockerfile .
 
 push:
 	docker push $(DOCKER_REPO):$(VERSION)
+	docker push $(DOCKER_REPO):latest
 
-build_and_push: build tag push
+build_and_push: build push
