--- a/modules/resourcespace/Makefile
+++ b/modules/resourcespace/Makefile
@@ -1,15 +1,11 @@
 # Makefile for building and pushing homer-resourcespace
-VERSION ?= latest
-IMAGE_NAME = homer-resourcespace
-DOCKER_REPO = mscrnt/$(IMAGE_NAME)
+VERSION ?= resourcespace
+DOCKER_REPO = mscrnt/homer
 
 build:
 	docker build -t $(DOCKER_REPO):$(VERSION) -f modules/resourcespace/Dockerfile .
 
-tag:
-	docker tag $(IMAGE_NAME):$(VERSION) $(DOCKER_REPO):$(VERSION)
-
 push:
 	docker push $(DOCKER_REPO):$(VERSION)
 
-build_and_push: build tag push
+build_and_push: build push
