feat(flow): Implement ShotGrid API client and core logic
- Added ShotGrid API client initialization in `client.py`.
- Created action handling logic in `actions.py` for AMI-triggered calls.
- Implemented activity stream retrieval and follower management in `activity.py`.
- Developed connection management functions in `connection.py` for server info and user authentication.
- Added CRUD operations for ShotGrid entities in `crud.py`.
- Implemented file upload and management logic in `files.py`.
- Created playlist version retrieval in `playlists.py`.
- Developed schema retrieval functions in `schema.py`.
- Implemented shot management logic in `shots.py` for creating, updating, and deleting shots.
- Added task retrieval for shots in `tasks.py`.
- Implemented utility functions for project management in `tools.py`.
- Developed version management logic in `versions.py` for creating and uploading thumbnails.
- Created FastAPI routes for all functionalities in respective route files.
- Added logging for better traceability and error handling across modules.

--- a/modules/flow/.env.example
+++ b/modules/flow/.env.example
@@ -11,3 +11,12 @@ HOMER_ENV=development
 # Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
+# === Flow Config ===
+# Flow API URL
+SG_SITE=https://yourstudio.shotgrid.autodesk.com
+
+# Flow Script Name
+SG_SCRIPT_NAME=your_script_name
+
+# Flow API Key
+SG_API_KEY=your_script_api_key
