--- a/stacks/github-atlassian/.env.example
+++ b/stacks/github-atlassian/.env.example
@@ -3,16 +3,16 @@
 # Secrets and endpoints for modular automation
 ################################################################################
 
-# === Ghosthub (GitHub Enterprise) ===
+# === GitHub Enterprise ===
 
 # GitHub API token (requires repo/read access at minimum)
 GH_TOKEN=your-personal-or-app-token-here
 
 # Repository to operate on (owner/repo or full GitHub URL)
-REPO_URL=https://ghosthub.corp.blizzard.net/sfd/vault-barts
+REPO_URL=https://github.corp.company.com/your-org/your-repo
 
 # Optional: Override GitHub Enterprise API root
-GITHUB_API_URL=https://ghosthub.corp.blizzard.net/api/v3
+GITHUB_API_URL=https://github.corp.company.com/api/v3
 
 
 # === Confluence (Atlassian) ===
@@ -24,7 +24,7 @@ CONFLUENCE_API_TOKEN=your-confluence-token
 CONFLUENCE_SPACE_KEY=DOC
 
 # Base URL of your Confluence instance (no trailing slash)
-CONFLUENCE_API_URL=https://confluence.blizzard.net
+CONFLUENCE_API_URL=https://confluence.corp.company.com
 
 
 # === Jira (Atlassian) ===
@@ -33,10 +33,10 @@ CONFLUENCE_API_URL=https://confluence.blizzard.net
 JIRA_API_TOKEN=your-jira-token
 
 # Target project key for ticket syncing or automation
-JIRA_PROJECT_KEY=BARTS
+JIRA_PROJECT_KEY=PROJ
 
 # Base URL of your Jira instance (no trailing slash)
-JIRA_API_URL=https://jira.blizzard.net
+JIRA_API_URL=https://jira.corp.company.com
 
 
 # === Slack (Planned) ===
