feat: Implement lazy-loaded global client for ResourceSpace and update Dockerfile to install git

--- a/stacks/homer-latest/Dockerfile
+++ b/stacks/homer-latest/Dockerfile
@@ -3,4 +3,7 @@ COPY modules/atlassian/ /homer/modules/atlassian/
 COPY modules/flow/ /homer/modules/flow/
 COPY modules/github/ /homer/modules/github/
 COPY modules/resourcespace/ /homer/modules/resourcespace/
+USER root
+RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+USER homer
 RUN pip install atlassian-python-api>=3.36.0 git+https://github.com/shotgunsoftware/python-api.git@v3.8.1 html2text markdown2 pygithub
