feat(ha_api): Implement Home Assistant API client and logic modules
- Added `client.py` for building synchronous and asynchronous Home Assistant API clients with caching support.
- Created `config.py` to define environment variable schema for Home Assistant integration.
- Introduced logic modules for handling authentication, entities, domains, services, events, and history.
- Implemented utility functions for managing states, logbook entries, and context.
- Added WebSocket client utilities for real-time interaction with Home Assistant.
- Established routes for API interactions, including entity management, event handling, and service triggering.
- Updated Dockerfile to include new dependencies and modules for Home Assistant API integration.

--- a/homer/Makefile
+++ b/homer/Makefile
@@ -3,13 +3,11 @@ VERSION ?= base
 DOCKER_REPO = mscrnt/homer
 
 build:
-	docker build --no-cache \
+	docker build \
 		-t $(DOCKER_REPO):$(VERSION) \
-		-t $(DOCKER_REPO):latest \
 		-f homer/Dockerfile .
 
 push:
 	docker push $(DOCKER_REPO):$(VERSION)
-	docker push $(DOCKER_REPO):latest
 
 build_and_push: build push
